fix accessibility link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="menu desktop_nav">
           <nav class="nav">
             <ul>
-              <li class="open_btn"><a href="javascript:void(0)" id="open_btn"><img src="assets/images/icon-hamburger.svg" alt=""></a></li>
+              <li class="open_btn"><a href="javascript:void(0)" id="open_btn"><img src="assets/images/icon-hamburger.svg" alt="Opening burger button"></a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Careers</a></li>
               <li><a href="#">Events</a></li>
